@@ -1,25 +1,21 @@
 package com.techpulse.techradar.config;
 
-import com.techpulse.techradar.shared.dto.ApiResponse;
-import com.techpulse.techradar.shared.exception.AppException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
-import org.springframework.web.reactive.function.server.ServerResponse;
-import org.springframework.web.server.WebExceptionHandler;
-import reactor.core.publisher.Mono;
 
 import java.util.Arrays;
 import java.util.List;
 
 /**
  * WebFlux configuration for reactive stack setup.
+ * <p>
+ * Exception-to-HTTP mapping lives in {@code shared.exception.GlobalExceptionHandler}
+ * ({@code @RestControllerAdvice}); non-application errors fall back to Spring Boot's default handler.
  */
 @Slf4j
 @Configuration
@@ -34,8 +30,20 @@ public class WebFluxConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        config.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
+        List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .filter(o -> !o.isEmpty())
+                .toList();
+        // "*" cannot be combined with allowCredentials=true; fall back to origin patterns.
+        if (origins.contains("*")) {
+            config.setAllowedOriginPatterns(List.of("*"));
+        } else {
+            config.setAllowedOrigins(origins);
+        }
+        config.setAllowedMethods(Arrays.stream(allowedMethods.split(","))
+                .map(String::trim)
+                .filter(m -> !m.isEmpty())
+                .toList());
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
@@ -43,28 +51,5 @@ public class WebFluxConfig {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
-    }
-
-    @Bean
-    public WebExceptionHandler webExceptionHandler() {
-        return (exchange, ex) -> {
-            log.error("Unhandled exception: ", ex);
-
-            int statusCode = 500;
-            String errorCode = "INTERNAL_SERVER_ERROR";
-
-            if (ex instanceof AppException appEx) {
-                statusCode = appEx.getStatusCode();
-                errorCode = appEx.getErrorCode();
-            }
-
-            ApiResponse<Void> errorResponse = ApiResponse.error(ex.getMessage(), errorCode);
-
-            return ServerResponse
-                    .status(statusCode)
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .bodyValue(errorResponse)
-                    .switchIfEmpty(ServerResponse.status(statusCode).build()).then();
-        };
     }
 }
